<resources>
    <string name="app_name">App actor-pelicula</string>
    <string name="action_settings">Settings</string>

    <string name="nombre">Nombre</string>
    <string name="entrar">Entrar</string>

    <string name="gestionAct">Gestionar actores</string>
    <string name="crearAct">Crear actores</string>


    <string name="apellido">Apellido</string>
    <string name="fechaNac">Fecha de Nacimiento</string>
    <string name="numPel">Numero peliculas</string>
    <string name="retirado">Retirado</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="gestionPel">Gestionar peliculas</string>
    <string name="crearPel">Crear peliculas</string>

    <string name="guardar">Guardar</string>

    <string name="idPel">Id Pelicula</string>
    <string name="anioLan">Anio lanzamiento</string>
    <string name="rating">Rating</string>
    <string name="actPrin">Actores principales</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="idAct">Id Actor</string>


</resources>
