<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/nombre"
            android:ems="10"
            android:id="@+id/tBNombre" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/apellido"
            android:ems="10"
            android:id="@+id/tBApelllido" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/tBNombre"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/tBFechaNac"
            android:text="@string/fechaNac" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/tBApelllido"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tBNumPel"
            android:text="@string/numPel" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/tBFechaNac"/>
    <CheckBox
            android:text="@string/retirado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cBRetirado" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tBNumPel" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="44dp"/>
    <Button
            android:text="@string/eliminar"
            android:layout_width="145dp"
            android:layout_height="62dp" tools:layout_editor_absoluteY="536dp"
            android:id="@+id/btnEliminar" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/btnActualizar"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/actualizar"
            android:layout_width="145dp"
            android:layout_height="62dp" tools:layout_editor_absoluteY="536dp"
            android:id="@+id/btnActualizar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"/>
    <Button
            android:text="@string/gestionPel"
            android:layout_width="145dp"
            android:layout_height="62dp"
            android:id="@+id/btnGestionarPel" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnEliminar" app:layout_constraintEnd_toStartOf="@+id/btnCrearPel"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/crearPel"
            android:layout_width="145dp"
            android:layout_height="62dp"
            android:id="@+id/btnCrearPel" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnActualizar" app:layout_constraintVertical_bias="0.509"/>
</android.support.constraint.ConstraintLayout>